# rustunnel

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.githooks/: pre-push
.github/homebrew/: rustunnel.rb.template
.github/workflows/: ci.yml  release.yml
crates/rustunnel-client/: Cargo.toml
crates/rustunnel-client/src/: config.rs  control.rs  display.rs  main.rs  proxy.rs  reconnect.rs
crates/rustunnel-mcp/: Cargo.toml
crates/rustunnel-mcp/src/: api_client.rs  main.rs  mcp.rs  tools.rs  tunnel_manager.rs
crates/rustunnel-protocol/: Cargo.toml
crates/rustunnel-protocol/src/: error.rs  frame.rs  lib.rs
crates/rustunnel-server/: Cargo.toml
crates/rustunnel-server/migrations/local/: 0001_captured_requests.sql
crates/rustunnel-server/migrations/pg/: 0001_initial_schema.sql
crates/rustunnel-server/src/: config.rs  error.rs  lib.rs  main.rs
crates/rustunnel-server/src/control/: mod.rs  mux.rs  server.rs  session.rs
crates/rustunnel-server/src/core/: limiter.rs  mod.rs  router.rs  tunnel.rs
crates/rustunnel-server/src/dashboard/: api.rs  mod.rs  ui.rs
crates/rustunnel-server/src/dashboard/assets/: 404.html  index.html  index.txt
crates/rustunnel-server/src/dashboard/assets/_next/static/chunks/: main-app-4f19f681a7347994.js
crates/rustunnel-server/src/dashboard/assets/_next/static/chunks/app/: layout-f429cd8302b94f3d.js  page-07825c6c27f706dc.js  page-095a940ee7206ffe.js  page-db6fc2df73236498.js
crates/rustunnel-server/src/dashboard/assets/_next/static/css/: 480655bbec5b2837.css
crates/rustunnel-server/src/db/: mod.rs  models.rs
crates/rustunnel-server/src/edge/: capture.rs  http.rs  mod.rs  tcp.rs
crates/rustunnel-server/src/tls/: acme.rs  mod.rs
dashboard-ui/: next.config.js  package-lock.json  package.json
dashboard-ui/app/: globals.css  layout.tsx
dashboard-ui/components/: AuthGate.tsx  Dashboard.tsx  Header.tsx  Panel.tsx  RequestDetail.tsx  RequestList.tsx  TokensPanel.tsx  TunnelTable.tsx
dashboard-ui/components/ui/: Badge.tsx  Dot.tsx
dashboard-ui/hooks/: useInterval.ts  useRequests.ts  useServerStatus.ts  useTunnels.ts
dashboard-ui/lib/: api.ts  types.ts
deploy/: Dockerfile  docker-compose.dev-deps.yml  docker-compose.local.yml  docker-compose.yml  prometheus.yml  rustunnel.service  server.local.toml  server.toml
deploy/local/: server.toml
docs/: ROADMAP.md  client-guide.md  deploy-server.md  docker-deployment.md  mcp-server.md
docs/development/: latency-fixes.md  public-release-security-review.md
scripts/: bump-version.sh
test_server/: README.md  server.js
test_server/public/: about.html  api-demo.html  index.html  live.html  style.css
tests/: Cargo.toml
tests/common/: mod.rs
tests/integration/: auth.rs  http_tunnel.rs  reconnect.rs  tcp_tunnel.rs
