[workspace]
members = [
    "crates/rustunnel-protocol",
    "crates/rustunnel-server",
    "crates/rustunnel-client",
    "tests",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
parking_lot = "0.12"
toml = "0.8"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
yamux = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server", "client"] }
http-body-util = "0.1"
bytes = "1"
tower = { version = "0.4", features = ["timeout", "util"] }
axum = { version = "0.7", features = ["macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }
tower-http = { version = "0.5", features = ["cors", "fs", "set-header"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
clap = { version = "4", features = ["derive"] }
serde_yaml = "0.9"
console = "0.15"
indicatif = "0.17"
rand = "0.8"
dirs = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
instant-acme = "0.7"
rcgen = "0.13"
arc-swap = "1"
x509-parser = "0.16"
tempfile = "3"
socket2 = { version = "0.5", features = ["all"] }
rustunnel-protocol = { path = "crates/rustunnel-protocol" }
