[package]
name = "rustunnel-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustunnel-client"
path = "src/main.rs"

[dependencies]
rustunnel-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
