[package]
name = "rustunnel-mcp"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "rustunnel-mcp"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
