[package]
name = "rustunnel-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustunnel_server"
path = "src/lib.rs"

[[bin]]
name = "rustunnel-server"
path = "src/main.rs"

[dependencies]
rustunnel-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
yamux = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tower = { workspace = true }
